--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,11 @@ services:
       - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092  
     depends_on:
       - zookeeper
+  producer:
+    image: producer:latest
+    depends_on:
+      - zookeeper
+      - kafka
  
 volumes:
   zookeeper_data:
