Setting up producer image

--- a/Producer/Dockerfile
+++ b/Producer/Dockerfile
@@ -1,2 +1,8 @@
-FROM producer:latest 
+FROM python:3 
+WORKDIR /producer
+USER root
+RUN apt-get update && apt install librdkafka-dev
+USER docker
+RUN pip install -r requirements.txt
+COPY . . 
 CMD ["python3", "Producer.py"]
