Debugging producer in compose

--- a/Producer/Dockerfile
+++ b/Producer/Dockerfile
@@ -1,8 +1,7 @@
 FROM python:3 
 WORKDIR /producer
+COPY . .
 USER root
-RUN apt-get update && apt install librdkafka-dev
-USER docker
+RUN apt-get update -y && apt install librdkafka-dev -y
 RUN pip install -r requirements.txt
-COPY . . 
 CMD ["python3", "Producer.py"]
