--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,11 +17,20 @@ services:
       - "kafka_data:/bitnami"
     environment:
       - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
-      - ALLOW_PLAINTEXT_LISTENER=yes  
-      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092  
+      - ALLOW_PLAINTEXT_LISTENER=yes
+      - KAFKA_LISTENERS=PLAINTEXT://:29092,PLAINTEXT_HOST://:9092  
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
+      - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
     depends_on:
       - zookeeper
-    
+  producer:
+    image: producer:latest
+    environment:
+      - KAFKA_STRING=kafka:29092
+    depends_on:
+      - zookeeper
+      - kafka
+    restart: always
  
 volumes:
   zookeeper_data:
