Producer working in compose yeeha

--- a/Producer/Dockerfile
+++ b/Producer/Dockerfile
@@ -1,7 +1,3 @@
-FROM python:3 
-WORKDIR /producer
+FROM producer:latest
 COPY . .
-USER root
-RUN apt-get update -y && apt install librdkafka-dev -y
-RUN pip install -r requirements.txt
 CMD ["python3", "Producer.py"]
